crates/mlir-rs/src/dialect/llvm/snapshots/mlir_rs__dialect__llvm__tests__compile_alloca.snap
---
source: crates/mlir-rs/src/dialect/llvm/mod.rs
expression: module.as_operation()
---
module {
  llvm.func @foo(%arg0: i64) {
    %0 = llvm.alloca %arg0 x i64 : (i64) -> !llvm.ptr
    llvm.return
  }
}
