crates/mlir-rs/src/dialect/llvm/snapshots/mlir_rs__dialect__llvm__tests__compile_insert_value.snap
---
source: crates/mlir-rs/src/dialect/llvm/mod.rs
expression: module.as_operation()
---
module {
  llvm.func @foo(%arg0: !llvm.struct<(i64)>) {
    %c42_i64 = arith.constant 42 : i64
    %0 = llvm.insertvalue %c42_i64, %arg0[0] : !llvm.struct<(i64)> 
    llvm.return
  }
}
