crates/mlir-rs/src/dialect/llvm/snapshots/mlir_rs__dialect__llvm__tests__compile_store_extra.snap
---
source: crates/mlir-rs/src/dialect/llvm/mod.rs
expression: module.as_operation()
---
module {
  llvm.func @foo(%arg0: !llvm.ptr, %arg1: i64) {
    llvm.store volatile %arg1, %arg0 {alignment = 4 : i64, nontemporal} : i64, !llvm.ptr
    llvm.return
  }
}
